--- a/app.conf
+++ b/app.conf
@@ -3,7 +3,12 @@ upstream web_node {
   }
 
 server {
-    listen 80;
+    listen 80 ;
+    listen 443 ssl;
+    server_name localhost;
+    ssl_certificate_key        server.key;
+    ssl_certificate               server.cer;
+   
     proxy_buffers 64 16k;
     proxy_max_temp_file_size 1024m;
     proxy_connect_timeout 5s;
@@ -48,4 +53,4 @@ server {
         access_log /var/www/api-gateway/log/nginx.access.log;
         error_log /var/www/api-gateway/log/nginx.error.log;
     }
-  }
+}
